# highctidh

./: .gitignore  .gitlab-ci.yml  .woodpecker.yml  BSDmakefile  Dockerfile  GNUmakefile  MANIFEST.in  Makefile  Makefile.am  Makefile.packages  README.md  README.python.md  TODO.dev  VERSION  autogen  configure.ac  csidh.c  csidh.h  docker-generate-fiat.sh  docker-multi-arch-package-build.sh  docker-setup.sh  docker-test-build.sh  examples_static.c  flake.nix  fp.h  fp1024.S  fp2048.S  fp2fiat.c  fp511.S  fp512.S  go.mod  go.sum  highctidh.h  int32_minmax.c  libhighctidh.pc.in  libhighctidh_1024.pc.in  libhighctidh_2048.pc.in  libhighctidh_511.pc.in  libhighctidh_512.pc.in  pyproject.toml  (+6 more)
.github/: debian-docker.yml  docker-alpine-msan.yaml  docker-alpine.yml  docker-fedora.yml  docker-ubuntu.yml  dragonflybsd-fiat-test.yaml  freebsd-fiat-test-non-gnu-make.yaml  macos-golang-test.yml  macos-python-test.yaml  netbsd-fiat-test.yaml  openbsd-fiat-test.yaml  solaris-i86pc-test.yaml  ubuntu-deb-clang-gcc-pytest.yaml  ubuntu-webassembly.yaml  windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml  windows-python-clang-test.yml-broken  windows-python-test.yml-broken
.github/workflows/: .docker-alma.yaml  .docker-alpine-32bit-multi-arch.yaml  .docker-alpine-64bit-multi-arch.yaml  .docker-alpine-asan.yaml  .docker-alpine-msan.yaml  .docker-alpine.yaml  .docker-amazonlinux.yaml  .docker-arch.yaml  .nix.yaml  (+187 more)
.woodpecker/: alpine.yaml  alpine.yml  debian.yml  golang-test.yml
CI/: debian.yml
ctidh1024/: binding1024.h  common.go  common_test.go  crypto_classify.h  fiat_p1024.c  fiat_p1024.h  fp1024.S  fp2fiat.c  fp_inv1024.c  fp_namespace.h  fp_sqrt1024.c  go.mod  int32_sort.c  mont.c  primes1024.c  primes_namespace.h  proj.h  randombytes.h  steps.h  steps_namespace.h  uintbig1024.S  uintbig_namespace.h  vectors1024_test.go
ctidh2048/: binding2048.h  cgo.h  common.go  common_test.go  crypto_classify.c  crypto_declassify.h  csidh_namespace.h  elligator.h  elligator_namespace.h  fiat_p2048.c  fiat_p2048.h  fp.h  fp2048.S  fp_inv2048.c  fp_sqrt2048.c  go.mod  golang-misc.c  int32_minmax.h  int32_sort.h  mont.h  poly.c  poly.h  poly_namespace.h  primes2048.c  randombytes.h  steps.c  uintbig2048.S  vectors2048_test.go
ctidh511/: annotations.h  binding511.h  common.go  common_test.go  crypto_classify.h  crypto_declassify.h  crypto_declassify_namespace.h  fiat_p511.c  fiat_p511.h  fp511.S  fp_inv511.c  fp_sqrt511.c  go.mod  int32_sort_x86.c  int32mask.h  int64mask.h  mont_namespace.h  primes511.c  random_namespace.h  randombytes.h  skgen.c  steps_untuned.c  uintbig.h  uintbig511.S  vectors511_test.go
ctidh512/: binding512.h  common.go  common_test.go  crypto_classify.h  crypto_declassify.c  csidh.c  csidh.h  elligator.c  fiat_p512.c  fiat_p512.h  fp512.S  fp_inv512.c  fp_sqrt512.c  go.mod  int32_sort.h  int32_sort_x86.c  primes512.c  random_namespace.h  randombytes.h  uintbig512.S  validate.c  vectors512_test.go
docs/: README.python.md  TODO
fiat-docker/: Dockerfile  README.md  fiat_p1024.c  fiat_p1024.patch  fiat_p2048.c  fiat_p2048.patch  fiat_p512.patch  generate-fields.sh
highctidh/: __init__.py  __version__.py
interfaces/: go.mod  go.sum  interfaces.go
misc/: alpine-multi-arch-docker-qemu-golang-test.sh  autogen.sh  cross-compile.sh  debian-multi-arch-docker-qemu-golang-test.sh  docker-clean.sh  docker-fixup.sh  docker-generate-fiat.sh  docker-gha-fixup.sh  docker-multi-arch-package-build.sh  docker-priv-setup.sh  docker-setup-fiat.sh  docker-setup.sh  highctidh-simple-benchmark.py  install-alma-deps.sh  install-alpine-deps.sh  install-amazonlinux-deps.sh  install-arch-deps.sh  install-clearlinux-deps.sh  install-debian-bookworm-cross-deps.sh  install-debian-bookworm-python-deps.sh  install-debian-deps-go-sanitizer.sh  install-debian-deps.sh  install-debian-go-deps-by-arch.sh  install-debian-go-deps.sh  install-debian-mantic-deps.sh  install-debian-minimal-deps.sh  install-debian-noble-deps.sh  install-debian-sid-cross-deps.sh  install-debian-sid-deps.sh  install-debian-testing-deps.sh  install-deps.sh  install-devuan-deps.sh  install-fedora-deps.sh  install-gentoo-deps.sh  install-opensuse-tumbleweed-deps.sh  install-openwrt-deps.sh  install-oraclelinux-deps.sh  install-rocky-deps.sh  install-ubuntu-deps.sh  install-ubuntu-latest-cross-deps.sh  (+14 more)
nix/: build-parameters.nix  c-library.nix  debian.nix  fmt.nix  git-hooks.nix  package-checks.nix  python-package.nix  systems.nix  version.nix
schemes/: go.mod  schemes.go
src/: BSDmakefile  GNUmakefile  MANIFEST.in  Makefile  Makefile.packages  README.md  VERSION  aarch64_macros.s  api.h  autogen  bench.c  binding1024.h  binding511.h  binding512.h  chain.py  checkct.c  costisog.py  costpoly.c  cpucycles.h  crypto_classify.h  crypto_declassify.h  csidh.c  csidh.h  csidh_namespace.h  elligator_namespace.h  example-ctidh.c  fiat_p1024.c  fiat_p2048.c  fiat_p511.c  fiat_p512.c  fp.h  fp1024.S  fp1024_aarch64.S  fp1024_x86_64.S  fp2048.S  fp2048_aarch64.S  fp2048_x86_64.S  fp2fiat.c  fp511.S  fp511_x86_64.S  (+44 more)
src/ctidh1024/: binding1024.h  common.go  crypto_declassify.h  ctidh1024.go  ctidh1024_test.go  elligator.c  fp1024_aarch64.S  fp1024_x86_64.S  fp2fiat.c  golang-misc.c  int32_minmax.h  int32_sort.h  primes.h  random.c  randombytes.c  randombytes.h  uintbig1024_aarch64.S  validate.c
src/ctidh2048/: binding2048.h  common.go  crypto_classify.h  csidh.c  ctidh2048.go  ctidh2048_test.go  fiat_p2048.c  fp2048_aarch64.S  fp2048_x86_64.S  fp2fiat.c  golang-misc.c  int32_sort_x86.c
src/ctidh511/: binding511.h  common.go  ctidh511.go  ctidh511_test.go  fp511_aarch64.S  golang-misc.c  int32_sort.c  int32_sort.h  random.c  uintbig511_aarch64.S
src/ctidh512/: binding512.h  common.go  crypto_declassify.h  ctidh512.go  ctidh512_test.go  fp2fiat.c  go.mod  golang-misc.c  mont.c  naidne.h  randombytes.c  uintbig512_aarch64.S
src/debian/: changelog  control
src/go-tests/: ctidh_test.go
src/highctidh/: __init__.py  __version__.py  bench.py
tests/: ctidh_test.go  test_highctidh.py
types/: go.mod  types.go
unified/: go.mod
(+20 files in other folders)
