[metadata]
name = highctidh
version = file: VERSION
author = Jacob Appelbaum
description = highctidh bindings for shared libraries
long_description = Python highctidh ctype bindings for installed shared libraries
url = https://codeberg.org/vula/highctidh
keywords = post-quantum cryptography, cryptography, ctidh, csidh, C, highctidh
license = Public Domain

[options]
python_requires = >=3.9
packages = highctidh

[build]
build_base = build
build_temp = build/tmp

[egg_info]
egg_base = build

[sdist]
keep_temp = 0
dist_dir = dist/source
formats = gztar
